0.16.3
	new feature: tell line number for lexical and syntax errors
	new feature: CodePress editor enables line numbers and syntax
		highlightling for RackCode editing
	bugfix: tags are now properly displayed for users
	bugfix: the JavaScript error isn't generated any more (fix by Aaron)
	bugfix: tag tree is now always correctly sorted
	bugfix: fix a typo in NAT rules displaying code (pointed out by Piotr Nowacki)
0.16.2 2008-08-21
	bugfix: IP address picker was broken
	bugfix: more message processing fixes
	bugfix: work around some NET-SNMP builds (reported by Walery Wysotsky)
	bugfix: some characters in password could break user access
	bugfix: pre-assigned tags didn't work for racks
	bugfix: tag roller could produce incorrect tag chains sometimes
	new feature: "router" addresses allocations
	new feature: support for local extensions and reports
	new feature: LDAP username to UID mapping by Walery Wysotsky
	new feature: extended IPv4 view mode (enabled by default)
	new feature: tag roller now processes objects in racks too
	new feature: start cutting off excessively long strings on the generated pages
	update: 3 more switches in SNMP code by Walery Wysotsky
	update: added a missing DB index (Aaron Dummer's advice)
	update: "slbconfig" gateway has been replaced by "sendfile"
	update: more detailed tag report
	update: "virtual" addresses are now "loopback" and "regular" became "connected"
	update: "placeholders" are now "spacers"
	update: more records were put into the demo data
0.16.1 2008-07-30
	new feature: pre-assigned tags for new VS and RS pools records
	new feature: cache RackCode parse tree for better performance
	new feature: display tags inline for IPv4 and SLB data
	new feature: optionally remember the last tab for each page
	bugfix: don't escape Greek letters to enable them in tag names
	bugfix: port manager messages were incorrect
	bugfix: shorten URLs to enable longer message logs
	bugfix: added missing index to database